# armature

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/dock/: __init__.py  __main__.py
examples/greet/: __init__.py  __main__.py
examples/task/: __init__.py  __main__.py
src/armature/: __init__.py
src/wampum/: __init__.py
tests/: __init__.py
tests/e2e/: conftest.py  test_dock_e2e.py  test_greet_e2e.py  test_task_e2e.py
tests/functional/: test_dock.py  test_greet.py  test_task.py
tests/unit/: test_groups.py  test_run.py  test_single.py  test_subcommands.py
